...
                                <rect key="frame" x="380" y="46" width="30" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="O9n-e6-Sc7"/>
                                    <constraint firstAttribute="width" constant="30" id="oaY-DL-GSn"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" image="magnifyingglass" catalog="system"/>
                                <connections>
                                    <action selector="searchButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6cw-gA-PKy"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LrH-aG-oDa" userLabel="Current Location Button">
                                <rect key="frame" x="4" y="46" width="30" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="30" id="1Yd-kF-01d"/>
                                    <constraint firstAttribute="height" constant="30" id="6Ro-Ly-YcI"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" image="location" catalog="system"/>
                                <connections>
                                    <action selector="LoadCurrentLocationWeather:" destination="BYZ-38-t0r" eventType="touchUpInside" id="P7X-fG-Tlh"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search by city name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dh4-kg-LE8">
                                <rect key="frame" x="38" y="46" width="338" height="34"/>
                                <color key="backgroundColor" white="0.8515625" alpha="0.4278949058219178" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xxt-vN-Gan">
...
