...

extension ViewController: GoogleSearchDelegate{
    func onPlaceSearchSuccess(result: SearchResponse) {
        DispatchQueue.main.async {
            self.locationNameLabel.isHidden = false
            if result.candidates.count <= 0{
                self.locationNameLabel.text = "Location Not Found"
                return
            }
            
            if let placeID = result.candidates[0].place_id{
                self.googlePlacesClient.getPlaceDetails(plase_id: placeID)
            }
...
