//
//  WeatherDVTUITests.swift
//  WeatherDVTUITests
//
//  Created by Nqobani Zulu on 2020/08/14.
//  Copyright © 2020 Nqobani Zulu. All rights reserved.
//

import XCTest

class WeatherDVTUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testSuccessfulPlaceSearch() {
        
        let app = XCUIApplication()
        let searchTextFielf = app.textFields["Search by city name"]
        searchTextFielf.tap()
        searchTextFielf.typeText("Durban")
        app.buttons["magnifyingglass"].tap()
        app.staticTexts["Durban, South Africa"].tap()
                
    }
    
    func testFailurePlaceSearch() {
        
        let app = XCUIApplication()
        let searchTextFielf = app.textFields["Search by city name"]
        searchTextFielf.tap()
        searchTextFielf.typeText("eistencape")
        app.buttons["magnifyingglass"].tap()
        app.staticTexts["Location Not Found"].tap()
        
    }
    
    func testSuccessCurrentLocation() {
        
        let app = XCUIApplication()
        app.buttons["location"].tap()
        app.textFields["Search by city name"].tap()
        
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
}
